--- a/.eslintrc
+++ b/.eslintrc
@@ -4,17 +4,33 @@
     "angular"
     ],
   "env": {
-      "es6": true,
-      "browser": true,
-      "node": true,
-      "jasmine": true,
-      "protractor": true
+    "es6": true,
+    "browser": true,
+    "node": true,
+    "jasmine": true,
+    "protractor": true
     },
   "rules": {
-    "strict": 2,
-    "indent": [2,4],
-    "quotes": [2,"single"],
+    "no-dupe-args": 2,
+    "no-dupe-keys": 2,
+    "no-duplicate-case": 2,
+    "no-unreachable": 2,
+    "valid-typeof": 2,
+    "indent": [2,2],
+    "quotes": [2, "single", "avoid-escape"],
     "linebreak-style": [2,"unix"],
-    "semi": [2,"always"]
+    "semi": 2,
+    "comma-spacing": 2,
+    "space-infix-ops": 2,
+    "space-return-throw-case": 2,
+    "space-before-function-paren": [2, "never"],
+    "space-before-blocks": [2, "always"],
+    "new-parens": 2,
+    "no-multiple-empty-lines": [2, {max: 2}],
+    "eol-last": 2,
+    "no-trailing-spaces": 2,
+    "space-after-keywords": 2,
+    "strict": [2, "global"],
+    "no-undef": 2
   }
 }
