Initial commit for spmemo

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "spmemo",
   "description": "a minimum-viable express+angular app with tests",
   "main": "",
   "authors": [
