--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "myapp",
+  "name": "spmemo",
   "description": "a minimum-viable express+angular app with tests",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "us10096698",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "body-parser": "^1.14.1",
     "bower": "^1.6.3",
