--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
   ],
   "dependencies": {
     "angular": "~1.4.7",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular-route": "~1.4.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
