--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-eslint": "^1.0.0",
     "gulp-jasmine": "^2.1.0",
     "gulp-protractor": "^1.0.0",
+    "gulp-sass": "^2.1.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.14",
     "karma-chrome-launcher": "^0.2.1",
