--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "angular": "~1.4.7",
     "bootstrap": "~3.3.5",
-    "angular-route": "~1.4.7"
+    "angular-route": "~1.4.7",
+    "angular-bootstrap": "~0.14.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
