--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,10 @@
     "angular": "~1.4.7",
     "bootstrap": "~3.3.5",
     "angular-route": "~1.4.7",
-    "angular-bootstrap": "~0.14.3"
+    "angular-bootstrap": "~0.14.3",
+    "angular-sanitize": "~1.4.7",
+    "angular-marked": "~1.0.0",
+    "highlightjs": "~8.9.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
