--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,10 @@
     "angular-bootstrap": "~0.14.3",
     "angular-sanitize": "~1.4.7",
     "angular-marked": "~1.0.0",
-    "highlightjs": "~8.9.1"
+    "highlightjs": "~8.9.1",
+    "angular-clipboard": "~1.1.1",
+    "angular-toastr": "~1.6.0",
+    "angular-animate": "~1.4.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
