--- a/bower.json
+++ b/bower.json
@@ -20,14 +20,25 @@
     "angular-marked": "~1.0.0",
     "highlightjs": "~8.9.1",
     "angular-clipboard": "~1.1.1",
-<<<<<<< HEAD
     "angular-toastr": "~1.6.0",
-    "angular-animate": "~1.4.8"
-=======
+    "angular-animate": "~1.4.8",
     "angular-ui-sortable": "~0.13.4"
->>>>>>> f1bd8bb... WIP: adding sort feature
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
+  },
+  "overrides": {
+    "angular": {
+      "dependencies": {"jquery": "~2.1.4"}
+    },
+    "highlightjs": {
+      "main": [
+        "highlight.pack.js",
+        "styles/solarized_dark.css"
+      ]
+    },
+    "bootstrap": {
+      "main": "dist/css/bootstrap.css"
+    }
   }
 }
