--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "eslint-plugin-angular": "^0.13.0",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.0.0",
+    "gulp-inject": "^3.0.0",
     "gulp-jasmine": "^2.1.0",
+    "gulp-load-plugins": "^1.1.0",
     "gulp-protractor": "^1.0.0",
     "gulp-sass": "^2.1.0",
     "jasmine-core": "^2.3.4",
@@ -21,7 +23,8 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
     "method-override": "^2.3.5",
-    "request": "^2.65.0"
+    "request": "^2.65.0",
+    "wiredep": "^3.0.0-beta"
   },
   "dependencies": {
     "express": "^4.13.3"
