--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
     "method-override": "^2.3.5",
-    "request": "^2.65.0",
+    "nock": "^7.0.2",
     "wiredep": "^3.0.0-beta"
   },
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "express-session": "^1.12.1"
   }
 }
