--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "karma-jasmine": "^0.3.6",
     "method-override": "^2.3.5",
     "nock": "^7.0.2",
+    "run-sequence": "^1.1.5",
     "wiredep": "^3.0.0-beta"
   },
   "dependencies": {
