--- a/bower.json
+++ b/bower.json
@@ -22,14 +22,17 @@
     "angular-clipboard": "~1.1.1",
     "angular-toastr": "~1.6.0",
     "angular-animate": "~1.4.8",
-    "angular-ui-sortable": "~0.13.4"
+    "angular-ui-sortable": "~0.13.4",
+    "font-awesome": "~4.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
   },
   "overrides": {
     "angular": {
-      "dependencies": {"jquery": "~2.1.4"}
+      "dependencies": {
+        "jquery": "~2.1.4"
+      }
     },
     "highlightjs": {
       "main": [
@@ -38,7 +41,13 @@
       ]
     },
     "bootstrap": {
-      "main": "dist/css/bootstrap.css"
+      "main": [
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ]
+    },
+    "font-awesome": {
+      "main": "css/font-awesome.css"
     }
   }
 }
