--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-toastr": "~1.6.0",
     "angular-animate": "~1.4.8",
     "angular-ui-sortable": "~0.13.4",
-    "font-awesome": "~4.5.0"
+    "font-awesome": "~4.5.0",
+    "ngstorage": "~0.3.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
