--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "spmemo",
   "description": "a minimum-viable express+angular app with tests",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "prestart": "bower install -p",
+  "start": "NODE_ENV=production node scripts/start.js"
   },
   "author": "us10096698",
   "license": "MIT",
   "devDependencies": {
-    "body-parser": "^1.14.1",
-    "bower": "^1.6.3",
     "eslint-config-angular": "^0.4.0",
     "eslint-plugin-angular": "^0.13.0",
     "gulp": "^3.9.0",
@@ -22,12 +21,14 @@
     "karma": "^0.13.14",
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
-    "method-override": "^2.3.5",
     "nock": "^7.0.2",
     "run-sequence": "^1.1.5",
     "wiredep": "^3.0.0-beta"
   },
   "dependencies": {
+    "method-override": "^2.3.5",
+    "body-parser": "^1.14.1",
+    "bower": "^1.6.3",
     "express": "^4.13.3",
     "express-session": "^1.12.1"
   }
