--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "spmemo",
   "description": "a minimum-viable express+angular app with tests",
   "scripts": {
-  "prestart": "bower install -p",
-  "start": "NODE_ENV=production node scripts/start.js"
+    "prestart": "bower install -p",
+    "start": "NODE_ENV=production node scripts/start.js"
   },
   "author": "us10096698",
   "license": "MIT",
@@ -21,15 +21,19 @@
     "karma": "^0.13.14",
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^1.0.0",
     "nock": "^7.0.2",
+    "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.4",
     "run-sequence": "^1.1.5",
     "wiredep": "^3.0.0-beta"
   },
   "dependencies": {
-    "method-override": "^2.3.5",
     "body-parser": "^1.14.1",
     "bower": "^1.6.3",
+    "cfenv": "^1.0.3",
     "express": "^4.13.3",
-    "express-session": "^1.12.1"
+    "express-session": "^1.12.1",
+    "method-override": "^2.3.5"
   }
 }
